# heartmula-studio

./: .gitignore  CLAUDE.md  Makefile  README.md  start.bat  start.sh  stop.bat  stop.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  job.py  settings.py  track.py
backend/app/routers/: events.py  generation.py  settings.py  system.py  tracks.py  transcription.py
backend/app/schemas/: __init__.py  events.py  job.py  settings.py  system.py  track.py
backend/app/services/: event_broadcaster.py  generation_worker.py  gpu_manager.py  job_queue.py  pipeline_manager.py  settings_service.py  storage_service.py  transcription_service.py
backend/app/utils/: audio.py  progress_hook.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/app/transcribe/: page.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  SSEProvider.tsx  Sidebar.tsx
frontend/src/components/player/: MiniPlayer.tsx
frontend/src/components/queue/: JobCard.tsx  QueueEmpty.tsx  QueuePanel.tsx
frontend/src/components/shared/: ConnectionStatus.tsx  GpuStatus.tsx  (+2 more)
frontend/src/hooks/: use-toast.ts  useAudioPlayer.ts  useDebounce.ts  useSSE.ts
frontend/src/lib/: api.ts  constants.ts  sse.ts  utils.ts
frontend/src/stores/: useLibraryStore.ts  usePlayerStore.ts  useQueueStore.ts  useSettingsStore.ts  useStudioStore.ts  useSystemStore.ts
frontend/src/types/: api.ts  events.ts  index.ts  models.ts
(+14 files in other folders)
